2020-08-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCutil.c,
	  support/regression/tests/p99-conformance.c:
	  Fix handling of digits 8 and 9 in universal character names.
	* support/regression/tests/bug-2363.c:
	  Redisable test for targets without enough memory.

2020-08-05 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peep.c:
	  Fix notUsed('f') for jr/jp (Bug #3095)
	* src/z80/peeph-gbz80.def:
	  Add rules for regression tests.

2020-08-05 Sergey Belyashov <sergey.belyashov@gmail.com>

	* support/regression/tests/bug-2363.c:
	  Enable test because bug #2363 looks to be fixed.

2020-08-05 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/z80/Makefile.in,
	  device/lib/z80/__sdcc_critical.s,
	  src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/z80.h,
	  support/regression/Makefile.in,
	  support/regression/ports/ucz80-nmos,
	  support/regression/ports/ucz80-nmos/spec.mk:
	  Fix bug #2321: Z80 generates unsafe code for critcial function entry.

2020-08-05 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/ez80_z80/Makefile.in,
	  device/lib/ez80_z80/__sdcc_bcall.s,
	  device/lib/z180/Makefile.in,
	  device/lib/z180/__sdcc_bcall.s,
	  device/lib/z80n/Makefile.in,
	  device/lib/z80n/__sdcc_bcall.s,
	  support/regression/tests/banked.c:
	  Implement RFE #152 for eZ80_Z80, Z180, Z80N.

2020-08-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Improve notUsed precision.

2020-08-04 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCpeeph.c,
	  src/z80/peeph-z80n.def:
	  Implement RFE #678: new peephole constraint unusedRegs.

2020-08-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peeph.def:
	  Improve parameter pushing.

2020-08-03 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph-z80n.def:
	  New rules to replace push nn by ld rr,nn / push rr.

2020-08-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Use more indexed adressing where it makes sense.
